--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <script>
-            var num = 10;
-            // alert(num);  // 弹框
-            console.log(num);  // 把内容输出在浏览器的控制台中
+            var str = "123";
+            var num = 4;
+            console.log(str * num);
         </script>
     </body>
 </html>
