--- a/index.html
+++ b/index.html
@@ -5,20 +5,8 @@
     </head>
     <body>
         <script>
-            var str = "abcoefoxyozzopp";
-            var pos = [];
-            var times = 0;
-            pos[0] = str.indexOf('o');
-
-            if(pos[0] != -1){  // 有 o 存在
-                times = 1;
-                for(var i = pos[0]; i < str.length; i ++) {
-                    if(str.indexOf('0', pos[pos.length - 1]));
-                }
-            }
-
-            console.log(pos);
-            console.log(times);
+            var str1 = 'abCdefg';
+            console.log(str1.toUpperCase());
         </script>
     </body>
 </html>
