--- a/EXAMPLES/EX3_styleAttributes_2.html
+++ b/EXAMPLES/EX3_styleAttributes_2.html
@@ -3,6 +3,7 @@
     <head>
         <!-- 利用display：none属性隐藏/display：block显示 -->
         <meta charset="utf-8">
+        <meta title="显示/隐藏二维码图片">
         <style>
             div {
                 width: 200px;
@@ -14,12 +15,14 @@
     </head>
 
     <body>
-        <div></div>
+        <div class="first"></div>
         <script>
             var div = document.querySelector('div');
+
             div.onclick = function() {
                 div.style.display = 'none';  // 隐藏
             }
+
         </script>
     </body>
 
