--- a/EXAMPLES/Ex2_formAttributes_2.html
+++ b/EXAMPLES/Ex2_formAttributes_2.html
@@ -4,6 +4,7 @@
         <!-- 仿登陆页面 -->
         <!-- 点击切换密码的显示/隐藏 -->
         <meta charset="utf-8">
+        <meta title="显示/隐藏密码">
         <style>
             .box {
                 position: relative;
