--- a/EXAMPLES/Ex3_styleAttributes_1.html
+++ b/EXAMPLES/Ex3_styleAttributes_1.html
@@ -3,6 +3,7 @@
     <head>
         <!-- js控制改变样式 -->
         <meta charset="utf-8">
+        <meta title="修改元素样式 - 两种方法">
         <style>
             div {
                 width: 200px;
